# capstone_design

autodrive/: CMakeLists.txt  package.xml
autodrive/include/: constant_a.h
autodrive/launch/: line_tracing.launch
autodrive/msg/: autodrive.msg
autodrive/src/: autodrive_pub.cpp  autodrive_sub.cpp  speed_debug.cpp
tf/platform_static_tf/: CMakeLists.txt  package.xml
tf/platform_static_tf/launch/: robot_setup.launch
tf/platform_static_tf/src/: move_base_debug.cpp
tf/platform_tf/: CMakeLists.txt  package.xml
tf/platform_tf/launch/: platform_tf.launch
tf/platform_tf/src/: camera_left_frame.cpp  camera_main_frame.cpp  camera_rear_frame.cpp  camera_right_frame.cpp  lidar_frame.cpp  platform_base_frame.cpp  test_pose_pub.cpp
tf/total_launch/: CMakeLists.txt  package.xml
tf/total_launch/launch/: gmapping_direct_driving.launch  gmapping_with_bag.launch  total_launch_wheelbase.launch  total_launch_wheelbase_no_lidar.launch
